# latentsync-upgrade2

./: .gitignore  Energía sagrada  README.md  README_API.md  align_video.sh  api.py  inference.sh  predict.py  pyproject.toml  requirements.txt  reversed_loop.py  setup_env.sh
configs/unet/: second_stage.yaml
latentsync/pipelines/: alignment_pipeline.py  lipsync_pipeline.py
latentsync/utils/: affine_transform.py  image_processor.py
preprocess/: detect_shot.py  resample_fps_hz.py
scripts/: align_video.py  inference.py  train_unet.py
