[project]
name = "latentsync"
version = "0.1.0"
description = "LatentSync"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "accelerate==0.26.1",
    "decord==0.6.0",
    "diffusers==0.32.2",
    "einops==0.7.0",
    "face-alignment==1.4.1",
    "ffmpeg-python==0.2.0",
    "gradio==5.12.0",
    "huggingface-hub==0.25.2",
    "librosa==0.10.1",
    "lpips==0.1.4",
    "mediapipe==0.10.11",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "opencv-python==4.9.0.80",
    "python-speech-features==0.6",
    "scenedetect==0.6.1",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers==4.48.0",
]
